2007-11-28 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Warning messages for failed calls to parse_and_bind now disabled by default 
	  Can be enabled by call to debug_output("on_nologfile") in pyreadlineconfig.ini

2007-11-20 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Applying patch from pan to fix flickering cursor problem when doing input
	  of chinese.
	
2007-11-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* make all conversion is done by ensure_unicode or ensure_str to ensure uniform
	  handling of unicode issues.

2007-11-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* More fixes to unicode handling.

2007-11-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixes to make clipboard play nice with unicode. Quick that treats the clipboard as
	  being str with pyreadline_encoding data. Thus convert to unicode when pasting and
	  converting to str when copying.

2007-11-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* More fixes to ensure unicode works when completing on filepaths with non ascii symbols. 
	  This fix assumes sys.stdout.encoding is valid for the filesystem. A more correct fix
	  must be applied to the completer code which is outside pyreadline.
	  Any str characters fed into pyreadline should be converted to unicode using 
	  unicode_helper.ensure_unicode.
	* The encoding assumed of strings is sys.stdout.encoding this can be changed by:
	  e.g.  pyreadline.unicode_helper.pyreadline_codepage="utf8"

2007-10-30 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixing console.title to work with wide characters
	* Fixing wide character bug for log_sock
	
2007-10-30 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Add tests for history buffer. Add ignore_leading_spaces option for 
	  history searches for forward_search_history, and reverse_search_history.
	
2007-10-29 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>